Fix Alignment

--- a/src/components/commons/index.scss
+++ b/src/components/commons/index.scss
@@ -94,7 +94,7 @@ button:disabled {
 
 .tooltip {
   &.container {
-    animation: flip 1000ms linear normal infinite;
+    animation: flip 2000ms linear normal infinite;
     background: $tool-tip-color;
     height: 20px;
     position: absolute;
@@ -214,4 +214,8 @@ button:disabled {
   min-width: 115px;
   overflow: hidden;
   height: 105px;
+}
+
+.search-cursor {
+  cursor: pointer;
 }
